export type AccomplishmentDto = {
  id: string;
  title: string;
  narrative: string;
  ordinal: number;
};
