---
title: TailoredIn — Database ERD (PostgreSQL)
---

erDiagram

    %% ──────────────────────────────────────────────
    %%  Group 1
    %% ──────────────────────────────────────────────

    accomplishments {
        uuid id PK
        uuid experience_id FK
        text title
        text narrative
        integer ordinal
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    accounts {
        uuid id PK
        text email
        text password_hash
        uuid profile_id FK
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    applications {
        uuid id PK
        uuid profile_id FK
        uuid company_id FK
        application_status status
        uuid job_description_id FK "nullable"
        text notes "nullable"
        uuid resume_content_id FK "nullable"
        text archive_reason "nullable"
        text withdraw_reason "nullable"
        timestamp applied_at
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    companies {
        uuid id PK
        text name
        text domain_name UK
        text description "nullable"
        text website UK "nullable"
        text logo_url "nullable"
        text linkedin_link UK "nullable"
        business_type business_type
        industry industry
        company_stage stage
        company_status status
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    concept_dependencies {
        uuid id PK
        uuid skill_id FK
        uuid concept_id FK
        timestamp created_at "default: CURRENT_TIMESTAMP"
    }

    concepts {
        uuid id PK
        text label
        text normalized_label UK
        concept_kind kind
        text category "nullable"
        text mind_name "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    educations {
        uuid id PK
        uuid profile_id FK
        text degree_title
        text institution_name
        integer graduation_year
        text location "nullable"
        text honors "nullable"
        integer ordinal
        boolean hidden_by_default
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    experience_skills {
        uuid id PK
        uuid experience_id FK
        uuid skill_id FK
        timestamp created_at "default: CURRENT_TIMESTAMP"
    }

    experiences {
        uuid id PK
        uuid profile_id FK
        text title
        text company_name
        text company_website "nullable"
        text company_accent "nullable"
        uuid company_id FK "nullable"
        text location
        text start_date
        text end_date
        text summary "nullable"
        integer ordinal
        integer bullet_min
        integer bullet_max
        boolean hidden_by_default
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    generation_prompts {
        uuid id PK
        uuid generation_settings_id FK
        generation_scope scope
        text content
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    generation_settings {
        uuid id PK
        uuid profile_id FK
        model_tier model_tier
        integer bullet_min
        integer bullet_max
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    job_descriptions {
        uuid id PK
        uuid company_id FK
        text title
        text description
        text url "nullable"
        text location "nullable"
        integer salary_min "nullable"
        integer salary_max "nullable"
        text salary_currency "nullable"
        job_level level
        location_type location_type
        job_source source
        timestamp posted_at "nullable"
        text raw_text "nullable"
        json sought_hard_skills "nullable"
        json sought_soft_skills "nullable"
        bytea resume_pdf "nullable"
        text resume_pdf_theme "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    job_fit_requirements {
        uuid id PK
        uuid job_fit_score_id FK
        text requirement
        text coverage
        text reasoning
        integer ordinal
    }

    job_fit_scores {
        uuid id PK
        uuid profile_id FK
        uuid job_description_id FK
        integer overall
        text summary
        timestamp created_at "default: CURRENT_TIMESTAMP"
    }

    profiles {
        uuid id PK
        text email
        text first_name
        text last_name
        text about "nullable"
        text phone "nullable"
        text github_url "nullable"
        text linkedin_url "nullable"
        text website_url "nullable"
        text location "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    resume_contents {
        uuid id PK
        uuid profile_id FK
        uuid job_description_id FK
        text headline
        json experiences
        json hidden_education_ids
        text prompt
        json schema "nullable"
        json score "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    skill_dependencies {
        uuid id PK
        uuid skill_id FK
        uuid implied_skill_id
        timestamp created_at "default: CURRENT_TIMESTAMP"
    }

    skills {
        uuid id PK
        text label
        text normalized_label UK
        skill_kind kind
        uuid category_id "nullable"
        text description "nullable"
        json aliases
        json technical_domains
        json conceptual_aspects
        json architectural_patterns
        text mind_name "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }


    %% ──────────────────────────────────────────────
    %%  Standalone
    %% ──────────────────────────────────────────────

    skill_categories {
        uuid id PK
        text label
        text normalized_label UK
        uuid parent_id "nullable"
        timestamp created_at "default: CURRENT_TIMESTAMP"
        timestamp updated_at "default: CURRENT_TIMESTAMP"
    }

    %% ──────────────────────────────────────────────
    %%  Relationships
    %% ──────────────────────────────────────────────

    experiences ||--o{ accomplishments : "has"
    profiles ||--o{ accounts : "has"
    profiles ||--o{ applications : "has"
    companies ||--o{ applications : "has"
    job_descriptions ||--o{ applications : "has"
    resume_contents ||--o{ applications : "has"
    skills ||--o{ concept_dependencies : "has"
    concepts ||--o{ concept_dependencies : "has"
    profiles ||--o{ educations : "has"
    profiles ||--o{ experiences : "has"
    companies ||--o{ experiences : "has"
    experiences ||--o{ experience_skills : "has"
    skills ||--o{ experience_skills : "has"
    generation_settings ||--o{ generation_prompts : "has"
    profiles ||--o{ generation_settings : "has"
    companies ||--o{ job_descriptions : "has"
    job_fit_scores ||--o{ job_fit_requirements : "has"
    profiles ||--o{ job_fit_scores : "has"
    job_descriptions ||--o{ job_fit_scores : "has"
    profiles ||--o{ resume_contents : "has"
    job_descriptions ||--o{ resume_contents : "has"
    skills ||--o{ skill_dependencies : "has"

    %% ──────────────────────────────────────────────
    %%  Styles
    %% ──────────────────────────────────────────────

    classDef group0 fill:#dae8fc,stroke:#6c8ebf,stroke-width:2px
    class accomplishments group0
    class accounts group0
    class applications group0
    class companies group0
    class concept_dependencies group0
    class concepts group0
    class educations group0
    class experience_skills group0
    class experiences group0
    class generation_prompts group0
    class generation_settings group0
    class job_descriptions group0
    class job_fit_requirements group0
    class job_fit_scores group0
    class profiles group0
    class resume_contents group0
    class skill_dependencies group0
    class skills group0
    classDef group1 fill:#d5e8d4,stroke:#82b366,stroke-width:2px
    class skill_categories group1
